<resources>
    <string name="app_name" translatable="false">زبوني</string>


    <string-array name="array">

        <item>شيكل اسرائيلي جديد</item>
        <item>dfsf</item>
        <item>sasdf</item>

    </string-array>
    <string name="facebook_app_id">324698381812712</string>
    <string name="fb_login_protocol_scheme">fb324698381812712</string>
    <string name="signin">تسجيل الدخول</string>
    <string name="password">كلمة المرور</string>
    <string name="confirmPassword">تأكيد كلمة المرور</string>
    <string name="noConnection1">أنت غير متصل بالانترنت</string>
    <string name="noConnection2">الرجاء التأكد من توافر الانترنت في جهازك</string>
    <string name="noConnection3">ثم أعد المحاولة مرة اخري</string>
    <string name="tryAgain">حاول مرة أخري</string>
    <string name="welcome">مرحبا بك في</string>
    <string name="promo_deleted">لقد تم حذف هذا الإعلان!</string>
    <string name="promo_banned">لقد تم حذر هذا الإعلان!</string>
    <string name="promo_paused">لقد تم ايقاف هذا الإعلان!</string>
    <string name="check_internet">الرجاء التحقق من الإتصال بالإنترنت!</string>
    <string name="video_thumbnail">video thumbnail</string>
    <string name="video_play_button">video play button</string>
    <string name="view_count">view count</string>
    <string name="favourite">favourite</string>
    <string name="promotion_image">promotion image</string>
    <string name="video_play_indicator">video play indicator</string>

    <string name="promotions_notes">5 اعلانات بصور - رصيدك 0/5<br />اعلان فيديو واحد - رصيدك 0/1<br />يمكنك اضافة</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="about_us">
<!--        القسم : تسوّق<br/>-->
        زبوني تطبيق الاعلانات المبوبة مجاني بالشرق الاوسط .
<br />
يوفر التطبيق طريقة سهلة وسريعة لعرض إعلانات المستخدمين حسب كل دولة.
<br />
<br />
قم بنشر إعلاناتك - شاهد إعلانات الاخرين - تواصل معهم من خلال الدردشة او الاتصال برقم الهاتف.
<br />
<br />
يحتوي التطبيق على المميزات التالية:
<br />
*-  امكانية نشر الاعلان من داخل التطبيق ( الكل - سيارات  – الكترونيات – العقارات – أثاث – حيوانات وطيور – خدمات - مستلزمات شخصية – أخرى )
و العديد من الأقسام المختلفة.
<br />
<br />
إضافة إعلانات صور واعلانات نصية واعلانات فيديو.
<br />
★ شراء وبیع البضائع المستعملة والجدیدة.
<br />
*-  التسجيل عن طريق فيس بوك وغوغل وتوييتر.
<br />
*-  التواصل مع الزبائن من داخل التطبيق عن طريق الرسائل الخاصة.
<br />
*- التواصل مع الزبائن  من خلال الدردشة.
<br />
*- البحث عن الاعلانات حسب البلد.
<br />
*- البحث عن الاعلانات حسب النوع.
<br />
*- مشاهدة مكان الاعلانات.
<br />
*- ميزة تقييم الاعلانات.
<br />
معرفة عدد المشاهدات لكل اعلان.
<br />
إمكانية فلترة الإعلانات حسب الأقسام وحسب السعر وعدد المشاهدات وغيرها.
<br />
اشعارات عند وجود زبون لاعلانك.
<br />
*- حساب خاص  لكل مستخدم.
<br />

*- مشاركة الإعلان على منصات التواصل
<br />

الميزات الجديدة
<br />
تم تحسين عمل التطبيق ليتناسب مع احدث إصدارات الاندرويد.
<br />
تم إضافة خاصية اضافة وعرض اعلانات لدولة أو موقع محدد - في القائمة الرئيسية.
<br />
تم تحسين عملية البحث في التطبيق وتقييد ظهور الإعلانات حسب الدولة او الموقع.
<br />
يمكنك إستخدام التطبيق ومشاهدة الاعلانات مع أو بدون تسجيل .
<br />
والمزيد من المميزات داخل التطبيق
<br />
<br />
تأكد من تجربة التطبيق ونشره بين الأصدقاء وعلى مواقع التواصل.
<br />
أعجبك التطبيق؟ تعليقك وتقييمك لنا يهمنا !إذا كان لديك أي اقتراحات أو بحاجة إلى مساعدة راسلنا على<a href="mailto: ahmedfikry@gmail.com"> ahmedfikry@gmail.com</a>

<br />
<br />

عنوان موقعنا
<a href="http://zeboony.com/">zeboony.com</a>

</string>

    <string name="privacy_policy">

يحرص تطبيق ( زبوني ) على حماية خصوصية المعلومات الشخصية التي تتلقاها منكم عند استخدام مختلف خدماته.
<br />
<br />
الصور والفيديوهات:
<br />
إذا قمت بتحميل الصور إلى تطبيق زبوني الويب ، فيجب تجنب تحميل الصور الشخصية.
<br />
<br />
عند تسجيل الدخول ، سنقوم أيضًا بإعداد العديد من ملفات تعريف الارتباط لحفظ معلومات تسجيل الدخول الخاصة بك وخيارات عرض الشاشة.
<br />
تستمر ملفات تعريف الارتباط لتسجيل الدخول لمدة يومين ، بينما تستمر ملفات تعريف ارتباط خيارات الشاشة لمدة عام.
<br />
إذا حددت "تذكرني" ، فسيستمر تسجيل دخولك لمدة أسبوعين.
<br />
إذا قمت بتسجيل الخروج من حسابك ، فستتم إزالة ملفات تعريف الارتباط الخاصة بتسجيل الدخول.
<br />
<br />
– نستخدم في تطبيق ( زبوني ) برامج إعلانية من طرف ثالث مثل شركة جوجل Google وبرنامجها الإعلاني AdSense وتقوم جوجل بجمع معلومات عن الزائرين مثل الصفحات التي تمت زيارتها وعنوان IP بهدف تقديم إعلانات تناسب اهتمامات المستخدم ومكانه الجغرافي.
<br />
<br />
– عند وجود شكوى أو استفسارات إضافية نرجو الاتصال بإدارة  التطبيق
<br />
يمكنك الاتصال عن طريق
<a href="mailto: ahmedfikry@gmail.com">ahmedfikry@gmail.com</a>
<br />
<br />
هذه السياسة قابلة للتعديل دون إشعار مسبق. إدارة التطبيق
</string>


    <string name="contact_us">

        عنوان موقعنا:<a href="http://zeboony.com/">zeboony.com</a>
        <br />
        <br />
        البريد الالكتروني:<a href="mailto: ahmedfikry@gmail.com">ahmedfikry@gmail.com</a>

    </string>
    <string name="skip">تخطي</string>
</resources>
