<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_10sdp"
    android:layout_margin="8dp"
    app:cardElevation="5dp"
    android:layoutDirection="ltr"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/myPromoImage"
            android:layout_width="match_parent"
            android:contentDescription="@string/promotion_image"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.56"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/myPromoArrow"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/play_arrow_white"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/video_play_indicator"
            app:layout_constraintBottom_toBottomOf="@+id/myPromoImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            android:scaleType="center"
            android:background="@drawable/play_circle" />

        <TextView
            android:id="@+id/myPromoPriceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/a_google"
            android:layout_marginStart="8dp"
            android:textDirection="ltr"
            android:layout_marginBottom="2dp"
            android:textColor="#fff"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/myPromoImage"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/myPromoTitleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/a_google"
            android:singleLine="true"
            android:layout_marginEnd="8dp"
            android:ellipsize="marquee"
            android:textAlignment="viewEnd"
            android:layout_marginStart="8dp"
            android:textColor="@color/red"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myPromoImage" />

        <ImageView
            android:id="@+id/myPromoHeartIv"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/favourite"
            app:layout_constraintEnd_toEndOf="@+id/myPromoTitleTv"
            app:layout_constraintTop_toBottomOf="@+id/myPromoTitleTv"
            app:srcCompat="@drawable/heart_grey_outlined" />

        <TextView
            android:id="@+id/myPromopublishFavTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/a_google"
            android:maxLength="3"
            android:textColor="@color/textGreyColor"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/myPromoHeartIv"
            app:layout_constraintEnd_toStartOf="@+id/myPromoHeartIv"
            app:layout_constraintTop_toTopOf="@+id/myPromoHeartIv" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/view_count"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@+id/myPromoViewsTv"
            app:layout_constraintTop_toTopOf="@+id/myPromoHeartIv"
            app:srcCompat="@drawable/eye_icon" />

        <TextView
            android:id="@+id/myPromoViewsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/a_google"
            android:maxLength="3"
            android:textColor="@color/textGreyColor"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/newestPromoCategoryTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/category_background"
            android:fontFamily="@font/a_google"
            android:gravity="center"
            android:lines="1"
            android:padding="2dp"
            android:textColor="#3D3D3D"
            android:textSize="12sp"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/myPromoViewsTv"
            app:layout_constraintWidth_percent="0.305" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/newestPromoDateTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/a_google"
            android:gravity="start|center_vertical"
            android:lines="1"
            android:textColor="#3D3D3D"
            android:textSize="12sp"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@+id/newestPromoCategoryTv"
            app:layout_constraintEnd_toEndOf="@+id/myPromoHeartIv"
            app:layout_constraintStart_toEndOf="@+id/newestPromoCategoryTv"
            app:layout_constraintTop_toTopOf="@+id/newestPromoCategoryTv" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>